--- a/src/Products.css
+++ b/src/Products.css
@@ -1,31 +1,42 @@
-.product{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:flex-end;
-    margin:10px;
-    padding:20px;
-    width:100%;
-    max-height:400px;
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 10px;
+    padding: 20px;
+    width: 100%;
+    max-height: 400px;
     /* max-width:100px; */
-    background-color:white;
-    z-index:1
+    background-color: white;
+    z-index: 1;
 }
 
-.product img{
-  max-height:200px;
-  width:100%;
-  object-fit:contain;
-  margin-bottom:15px;
+.product img {
+    max-height: 200px;
+    width: 100%;
+    object-fit: contain;
+    margin-bottom: 15px;
 }
 
-.product button{
-    background:#f0c14b;
-    border:1px solid;
-    margin-top:10px;
-    border-color:#a88734 #9c7e31 #846a29;
-    color:black;
+.product button {
+    background: #f0c14b;
+    border: 1px solid;
+    margin-top: 10px;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: black;
 }
-.product__price{
-    margin-top:5px;
+
+.product__price {
+    margin-top: 5px;
+}
+
+.product__rating {
+    display: flex;
+}
+
+.add__to__basket__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
