--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
 * {
     margin: 0;
+    
 }
+
+:root {
+    --color-bg: #1f1f38;
+    --color-light: rgba(255, 255, 255, 0.6);
+    --color-primary: #4db5ff;
+    --color-primary-variant: rgba(77, 181, 255, .4);
+    --color-bg-variant: #2c2c6c;
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-ms: 90%;
+    --transition: all 400ms ease;
+}
+
 
 body {
     background-color: rgb(234, 237, 237);
